--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
 #mybatis.config-location= classpath:mybatis-config.xml
 #使用xml时放开这句
-#mybatis.mapper-locations=classpath:/mappers/UserMapper.xml
+mybatis.mapper-locations=classpath:/mapper/mysql/SysUserByMySqlMapper.xml
 #mybatis.type-aliases-package=com.example.demo.model
 #静态资源路径
 spring.mvc.static-path-pattern=/**
